--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,11 @@ dependencies:
     sdk: flutter
   
   flutter_svg: ^1.1.6
+  firebase_core: ^2.4.1
+  cloud_firestore: ^4.3.1
+  firebase_auth: ^4.2.4 
+  firebase_storage: ^11.0.10
+  image_picker: ^0.8.6
 
 
   # The following adds the Cupertino Icons font to your application.
